k8s-aws/10-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: derent
spec:
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: user-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: derent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8082"
    spec:
      containers:
        - name: user-service
          image: 321421555934.dkr.ecr.us-east-1.amazonaws.com/user-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
