k8s-aws/11-property-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: property-service
  namespace: derent
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: property-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: property-service
  namespace: derent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: property-service
  template:
    metadata:
      labels:
        app: property-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8081"
    spec:
      containers:
        - name: property-service
          image: 321421555934.dkr.ecr.us-east-1.amazonaws.com/property-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
