k8s-aws/12-booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: derent
spec:
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: booking-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: derent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8083"
    spec:
      containers:
        - name: booking-service
          image: 321421555934.dkr.ecr.us-east-1.amazonaws.com/booking-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
