k8s-aws/14-notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: derent
spec:
  ports:
    - port: 8084
      targetPort: 8084
  selector:
    app: notification-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: derent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8084"
    spec:
      containers:
        - name: notification-service
          image: 321421555934.dkr.ecr.us-east-1.amazonaws.com/notification-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
