k8s-aws/15-reclamation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reclamation-service
  namespace: derent
spec:
  ports:
    - port: 8091
      targetPort: 8091
  selector:
    app: reclamation-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reclamation-service
  namespace: derent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reclamation-service
  template:
    metadata:
      labels:
        app: reclamation-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8091"
    spec:
      containers:
        - name: reclamation-service
          image: 321421555934.dkr.ecr.us-east-1.amazonaws.com/reclamation-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8091
