k8s-aws/16-blockchain-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockchain-service
  namespace: derent
spec:
  type: LoadBalancer
  ports:
    - port: 8545
      targetPort: 8545
  selector:
    app: blockchain-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockchain-service
  namespace: derent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blockchain-service
  template:
    metadata:
      labels:
        app: blockchain-service
    spec:
      containers:
        - name: blockchain-service
          image: 321421555934.dkr.ecr.us-east-1.amazonaws.com/blockchain-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8545
