k8s-aws/17-ai-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricing-api
  namespace: derent
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30002 # Fixed NodePort for easier access
  selector:
    app: pricing-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-api
  namespace: derent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricing-api
  template:
    metadata:
      labels:
        app: pricing-api
    spec:
      containers:
        - name: pricing-api
          image: 321421555934.dkr.ecr.us-east-1.amazonaws.com/pricing-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
