k8s-aws/30-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: derent
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: derent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 321421555934.dkr.ecr.us-east-1.amazonaws.com/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
