k8s-aws/42-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: derent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:9.5.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources/prometheus.yaml
              subPath: prometheus.yaml
            - name: grafana-dashboard-provider
              mountPath: /etc/grafana/provisioning/dashboards/dashboard-provider.yaml
              subPath: dashboard-provider.yaml
            - name: grafana-dashboards-json
              mountPath: /var/lib/grafana/dashboards
      volumes:
        - name: grafana-storage
          emptyDir: {}
        - name: grafana-datasources
          configMap:
            name: grafana-datasources
        - name: grafana-dashboard-provider
          configMap:
            name: grafana-dashboard-provider
        - name: grafana-dashboards-json
          configMap:
            name: grafana-dashboards-json

---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: derent
spec:
  selector:
    app: grafana
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30092
